Re-engineer the API response transformations depending on the Accept headers (#643)
* reintroduce field processing

* Update RegistrySearchRequestBuilder.java

blah, null possible

* wip: replace business login by transformers

* finalize transformer implementation, check #548 and clean up

* catch up with develop improvements on migrated code.

* add missing files

* fix missed during merge with develop

* attempt to reduce code duplication for sonarcube metrics

* remove unused imports

* fix log formatting

* Remove opensearch field native constants, use API translation instead.

* fixing sonarcube reported issues.

* fix more sonarcube reported coding mistakes

* Use more PdsProperty objects especially in the new Transformer package, centralize PdsProperty constant definition.

* Update Stream method following sonarcloud recommandation.

* other sonarcloud report fixes

---------

Co-authored-by: Al Niessner <Al.Niessner@xxx.xxx>
Co-authored-by: al-niessner <1130658+al-niessner@users.noreply.github.com>
Co-authored-by: thomas loubrieu <thomas.loubrieu@jpl.nasa.gov>