@@ -1,4 +1,4 @@
-package gov.nasa.pds.api.registry.model.api_responses;
+package gov.nasa.pds.api.registry.model;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -11,7 +11,8 @@ public class RawMultipleProductResponse {
   private Summary summary;
   private List<Map<String, Object>> products;
 
-  private List<SummaryFacet> extractFacetsFromSearchResponse(SearchResponse<HashMap> searchResponse) {
+  private List<SummaryFacet> extractFacetsFromSearchResponse(
+      SearchResponse<HashMap> searchResponse) {
     List<SummaryFacet> facets = new ArrayList<>();
 
     searchResponse.aggregations().forEach((propertyName, aggregate) -> {
@@ -46,12 +47,12 @@ public class RawMultipleProductResponse {
     this.summary = new Summary();
     this.summary.setHits((int) searchResponse.hits().total().value());
     this.summary.setFacets(extractFacetsFromSearchResponse(searchResponse));
-    this.products = searchResponse.hits().hits().stream().map(p -> (Map<String, Object>) p.source())
-        .collect(Collectors.toList());
+    this.products =
+        searchResponse.hits().hits().stream().map(p -> (Map<String, Object>) p.source()).toList();
 
   }
 
-  public RawMultipleProductResponse(HashMap<String, Object> product) {
+  public RawMultipleProductResponse(Map<String, Object> product) {
     this.summary = new Summary();
     this.summary.setHits(1);
     this.products = new ArrayList<Map<String, Object>>();
